fix code statics

--- a/monitor/views/root.html
+++ b/monitor/views/root.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="RootController">
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -26,7 +26,7 @@
 
 
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row sidebar-nav navbar-collapse margin-bottom:0">
 			<div class="col-sm-2 col-md-2 sidebar">
 <!-- 				<div style="margin-left: auto;  margin-right: auto; ">
 					<button type="button" class="btn btn-primary" style="margin-right: 2px;"> <span class="glyphicon glyphicon-open" aria-hidden="true"
@@ -44,9 +44,9 @@
 				</div> -->
 				
 				<div style="margin-left: auto;  margin-right: auto; ">
-					<ul class="nav nav-sidebar" role="navigation">
+					<ul class="nav in" role="navigation">
 					
-						<li><a href=""><span>Msg Server</span></a></li>
+						<li><a href="" class="active"><span class="active">Msg Server</span></a></li>
 						<li><a href=""><span>Gateway Server</span></a></li>
 						<li><a href=""><span>Router Server</span></a></li>
 						<li><a href=""><span>manager Server</span></a></li>
