--- a/monitor/views/msg_server.html
+++ b/monitor/views/msg_server.html
@@ -1,4 +1,4 @@
-<div ng-controller="RootController">
+<div ng-controller="MsgServerController">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -27,22 +27,7 @@
 
 	<div class="container-fluid">
 		<div class="row sidebar-nav navbar-collapse margin-bottom:0">
-			<div class="col-sm-2 col-md-2 sidebar">
-<!-- 				<div style="margin-left: auto;  margin-right: auto; ">
-					<button type="button" class="btn btn-primary" style="margin-right: 2px;"> <span class="glyphicon glyphicon-open" aria-hidden="true"
-					></span> 上传 </button>
-					<div class="btn-group">
-						<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-							+ <span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu" role="menu">
-						<li><a href="#"> 新建文件夹</a></li>
-						<li class="divider">
-						<li><a href="#">分离的链接</a></li>
-						</ul>
-					</div>
-				</div> -->
-				
+			<div class="col-sm-2 col-md-2 sidebar">			
 				<div style="margin-left: auto;  margin-right: auto; ">
 					<ul class="nav in" role="navigation">
 					
@@ -64,17 +49,6 @@
 		<div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
 			<div class="panel panel-default">
 					<div class="panel-heading">
-						Gateway Server
-					</div>
-					<!-- /.panel-heading -->
-					<div class="panel-body">
-						
-					</div>
-					<!-- /.panel-body -->
-			</div>
-			
-			<div class="panel panel-default">
-					<div class="panel-heading">
 						Msg Server
 					</div>
 					<!-- /.panel-heading -->
@@ -82,30 +56,7 @@
 						
 					</div>
 					<!-- /.panel-body -->
-			</div>			
-
-			<div class="panel panel-default">
-					<div class="panel-heading">
-						Router Server
-					</div>
-					<!-- /.panel-heading -->
-					<div class="panel-body">
-						
-					</div>
-					<!-- /.panel-body -->
 			</div>
-			
-			<div class="panel panel-default">
-					<div class="panel-heading">
-						manager Server
-					</div>
-					<!-- /.panel-heading -->
-					<div class="panel-body">
-						
-					</div>
-					<!-- /.panel-body -->
-			</div>
-			
 		</div>
 
 	</div>
